# zernike-detection

./: MATH_CALCULATIONS_REFERENCE.md  ZERNIKE_IMPLEMENTATION_ANALYSIS.md  functions.py  main.py
cpp_version/: .gitignore  CMakeLists.txt  COORDINATE_TYPES.md  README.md  build_and_run.bat  build_and_run.ps1  chosen_points.json  compile_and_run.ps1  coordinate_types_example.cpp  example_helper_usage.cpp  file_utils.cpp  file_utils.h  helper.cpp  helper.h  image_utils.cpp  image_utils.h  main.cpp  zernike_edge_detection.cpp  zernike_edge_detection.h
results/2026-01-27_22-02-45/: beluga.txt  blue.txt  humpback.txt  narwhal.txt  orca.txt
